Доработка класса JwtResponseDTO чтобы выводил нужную информацию Проработка контроллера для входа